web-infras/parser/tests/fixtures/babel/es2015/for-in/const-initializer/output.txt
[SyntaxError]: 'for-in' loop variable declaration may not have an initializer. (1,12)
1|for (const a = 0 in {});
 |          ^
